# pre-plus-plus

./: .clangd  .gitignore  Cargo.toml  Cppm.toml  info.toml
exercises/functions/: function1.cpp  function2.cpp
exercises/if/: if1.cpp
exercises/intro/: intro1.cpp  intro2.cpp
include/: pre-plus-plus.hpp  prepp.hpp
include/ex1/: main.cpp
src/: compile.cpp  compiler.rs  exercise.rs  main.cpp  main.rs  ui.rs
