[package]
edition = "2021"
name = "pre-plus-plus"
version = "1.0.0"
authors = ["Maou Shimazu <maoushimazu@protonmail.com>"]

[[bin]]
name = "prepp"
path = "src/main.rs"

[dependencies]
clap = {version = "3.2.16", features = ["derive"]}
serde = {version = "1.0.143", features = ["derive"]}
toml = "0.5.9"
regex = "1.5"
indicatif = "0.16"
console = "0.15"